--- a/templates/index.html
+++ b/templates/index.html
@@ -1,44 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-<link rel="stylesheet" type="text/css" href="../static/css/main.css">
-</head>
-<body>
-{% load static %}
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0">
+    <meta charset="utf-8">
 
-    <div class="row">
-    <div class="columnform">
-        <h1>
-        HI,
-        ure a fag
-        </h1>
-    <div id="form">
+    <title>WordCloud</title>
+
+    <link rel="stylesheet" type="text/css" href="../static/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/image-picker.css">
+
+    <script type='text/javascript' src="../static/jquery.js"></script>
+    <script type="text/javascript" src="../static/image-picker.js"></script>
+    <script type="text/javascript" src="../static/jscolor.js"></script>
+    <script>
+
+		$(document).ready(function(){
+            var pick = $('select.mask > option');
+		    pick.each(function(){
+				var r = '../static/masks/';
+				var path =  r + this.value;
+		       $(this).attr({'data-img-src': path});
+            });
+
+            $("select.mask").imagepicker({
+          hide_select : false,
+          show_label  : false,
+        });
+            var td = $('select.mask').parent();
+            console.log(td);
+});
+
+	</script>
+    {% load static %}
+
+</head>
+
+<body>
+<div id="header">
+    <h1>
+Wordcloud generator
+</h1>
+        <hr>
+</div>
+
+<div class="colmask doublepage">
+
+
+
+<div class="colleft">
+
+
+<div class='col1'>
 
     <form method="post">
         {% csrf_token %}
-            {{ form.as_p }}
+            <table border="1">
+            {{ form.as_table }}
+            </table>
             <input type="submit" value="submit" name="submit">
-            <input type="submit" value="re" name="RECOLOR">
+        {% if imageraster %}
+                <a href="{{ imageraster }}" download="WordCloud">
+                    <input type="button" value="Download"></a>
+        {% endif %}
     </form>
 
-    </div>
-    </div>
-    <div class="column">
+<!-- end of col1-->
+</div>
 
-    <div id="imagebox" class="square">
-    {% if image %}
-        {{ image|safe }}
-    {% endif %}
+<div class="col2">
+
     {% if imageraster %}
-        <img src="{{ imageraster }}">
+        <img src="{{ imageraster }}" id='generated'>
     {% endif %}
-    </div>
-    </div>
 
-    </div>
-<script type='text/javascript' src="../static/jscolor.js"></script>
+<!-- end of col2-->
+</div>
 
+<!-- end of colleft-->
+</div>
+
+
+<!-- end of colmask-->
+</div>
+
+<div id="footer">2019</div>
 </body>
 </html>
