--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,21 +1,146 @@
-.row {
-  display: flex;
-}
+body {
+		margin:0;
+		padding:0;
+		border:0;
+		width:100%;
+		background:#fff;
+		min-width:600px;
+		font-size:90%;
+	}
+	a {
+		color:#369;
+	}
+	a:hover {
+		color:#fff;
+		background:#369;
+		text-decoration:none;
+	}
+	h1, h2, h3 {
+		margin:.8em 0 .2em 0;
+		padding:0;
+	}
+	p {
+		margin:.4em 0 .8em 0;
+		padding:0;
+	}
+	img:not(#generated) {
+		margin:10px 0 5px;
+        max-width: 25px;
+        max-height: 25px;
+	}
 
-.column {
-  flex: 50%;
-}
-
-.columnform {
-    flex: 50%
-}
-
-img {
-    max-width: 100%;
-    max-height: 100%;
-}
-
-.square {
-    height: 800px;
-    width: 600px;
+    img {
+    max-width: 800px;
+    max-height: 600px;
+    }
+	#header {
+		clear:both;
+		float:left;
+		width:100%;
+	}
+	#header {
+		border-bottom:1px solid #000;
+	}
+	#header p,
+	#header h1,
+	#header h2 {
+		padding:.4em 15px 0 15px;
+		margin:0;
+	}
+	#header ul {
+		clear:left;
+		float:left;
+		width:100%;
+		list-style:none;
+		margin:10px 0 0 0;
+		padding:0;
+	}
+	#header ul li {
+		display:inline;
+		list-style:none;
+		margin:0;
+		padding:0;
+	}
+	#header ul li a {
+		display:block;
+		float:left;
+		margin:0 0 0 1px;
+		padding:3px 10px;
+		text-align:center;
+		background:#eee;
+		color:#000;
+		text-decoration:none;
+		position:relative;
+		left:15px;
+		line-height:1.3em;
+	}
+	#header ul li a:hover {
+		background:#369;
+		color:#fff;
+	}
+	#header ul li a.active,
+	#header ul li a.active:hover {
+		color:#fff;
+		background:#000;
+		font-weight:bold;
+	}
+	#header ul li a span {
+		display:block;
+	}
+	#layoutdims {
+		clear:both;
+		background:#eee;
+		border-top:4px solid #000;
+		margin:0;
+		padding:6px 15px !important;
+		text-align:right;
+	}
+	.colmask {
+		clear:both;
+		float:left;
+		width:100%;
+		overflow:hidden;
+	}
+	.colright,
+	.colmid,
+	.colleft {
+		float:left;
+		width:100%;
+		position:relative;
+	}
+	.col1,
+	.col2,
+	.col3 {
+		float:left;
+		position:relative;
+		padding:1em 0 1em 0;
+		overflow:hidden;
+	}
+	.doublepage {
+		background:#fff;
+	}
+	.doublepage .colleft {
+		right:49%;
+		background:#F5FFFD;
+	}
+	.doublepage .col1 {
+		width:46%;
+		left:51%;
+	}
+	.doublepage .col2 {
+		width:46%;
+		left:56%;
+	}
+	#footer {
+		clear:both;
+		float:left;
+		width:100%;
+		border-top:1px solid #000;
+	}
+	#footer p {
+		padding:10px;
+		margin:0;
+	}
+form {
+	width: 357px;
 }
