--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,11 @@
                 hide_select:false
 
             });
+            $('#id_Height').attr("placeholder", 'height required if not using mask; default if blank is 4 ');
+            $('#id_Width').attr("placeholder", 'width required if not using mask; default if blank is 7 ');
+
+		    $('#id_Max_words').attr("placeholder", 'default if blank is 100 ');
+            $('#id_Words').attr("placeholder", 'at least one word is required ')
 });
 
 	</script>
@@ -74,9 +79,9 @@ Wordcloud generator
 
     <form method="post">
         {% csrf_token %}
-            <table border="1">
-            {{ form.as_table }}
-            </table>
+
+            {{ form.as_p }}
+
             <input type="submit" value="submit" name="GENERATE" class="submit">
         {% if imageraster %}
                 <a href="{{ imageraster }}" download="WordCloud">
