--- a/templates/index.html
+++ b/templates/index.html
@@ -83,9 +83,11 @@ Wordcloud generator
             {{ form.as_p }}
 
             <input type="submit" value="submit" name="GENERATE" class="submit">
+            <input type="reset" class="button">
         {% if imageraster %}
                 <a href="{{ imageraster }}" download="WordCloud">
                     <input type="button" value="Download" class="button"></a>
+
         {% endif %}
     </form>
 
